<resources>
    <string name="app_name">ShoppingMall</string>
    <string name="mainActivity_fragment_title_home">首页</string>
    <string name="mainActivity_fragment_title_sort">分类</string>
    <string name="mainActivity_fragment_title_find">发现</string>
    <string name="mainActivity_fragment_title_shopCar">购物车</string>
    <string name="mainActivity_fragment_title_mine">个人中心</string>
    <string name="message">消息</string>
    <string name="down_time">00:00:00</string>
    <string name="find_more">查看更多</string>
    <string name="home_new">新品推荐</string>
    <string name="home_hot">这里都是买的棒棒哒</string>

    <string name="detailToolbar">商品详情</string>
    <string name="detailContext">"预售截止10月15日，预售期为限量礼盒版,包括特制木盒×1、画集x1、邮票x1套、书签x1、贴纸x1、信封x1、礼盒特 "</string>
    <string name="detailText">由</string>
    <string name="SGG">尚硅谷</string>
    <string name="detailText2">发货</string>
    <string name="detailSelectText">请选择款式</string>
    <string name="detailTips">提示:普通商品享有质量问题7天退货，签收后3个工作日内可换货。其他特殊商品(如手办)的售后以页面说明为准
</string>
    <string name="detail">图文详情</string>
    <string name="share">分享</string>
    <string name="search">搜索</string>
    <string name="home">首页</string>

    <string name="dfk">待付款</string>
    <string name="dfh">待发货</string>
    <string name="dsh">待收货</string>
    <string name="ywc">已完成</string>
    <string name="shouh">售后/退款</string>
    <string name="shdz">收货地址</string>
    <string name="wdsc">我的收藏</string>
    <string name="wdyhj">我的优惠券</string>
    <string name="wdgz">我的瓜子</string>
    <string name="wdjp">我的奖品</string>
    <string name="wddzp">我的电子票</string>
    <string name="yqfx">邀请分享</string>
    <string name="kfzx">客服中心</string>
    <string name="fwfk">服务反馈</string>
    <string name="classification">分类</string>
    <string name="label">标签</string>

    <string name="SKIRT">小裙子</string>
    <string name="JACKET_URL">上衣</string>
    <string name="PANTS_URL">下装</string>
    <string name="OVERCOAT_URL">外套</string>
    <string name="ACCESSORY_URL">配件</string>
    <string name="BAG_URL">包包</string>
    <string name="DRESS_UP_URL">装扮</string>
    <string name="HOME_PRODUCTS_URL">居家宅品</string>
    <string name="STATIONERY_URL">办公文具</string>
    <string name="DIGIT_URL">数码周边</string>
    <string name="GAME_URL">游戏专区</string>
    <string name="shopchar">购物车</string>
    <string name="hotRecommed">热卖推荐</string>
    <string name="commonSort">常用分类</string>
    <string name="zhibo">直播</string>


</resources>