<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relat"
    android:orientation="vertical"
    tools:context="com.shoppingmall.detail.DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50">
            <ImageView
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/back11"
                android:id="@+id/detailBack"></ImageView>
            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:textSize="@dimen/dp_20"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/detailToolbar"></TextView>
            <ImageView
                android:layout_width="@dimen/dp_0"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/menu"
                android:id="@+id/detailMenu"></ImageView>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/gray"></View>
        <ImageView
            android:id="@+id/detailImg"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:layout_height="@dimen/dp_300"
            android:src="@drawable/icon_share_qq"></ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:id="@+id/detailTitle"
            android:textSize="@dimen/dp_13"
            android:textColor="@color/black"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/detailContext"
            android:textSize="@dimen/dp_13"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/detailPrice"
            android:textSize="@dimen/dp_15"
            android:text="xxx"
            android:layout_margin="@dimen/dp_10"
            android:textColor="@color/red"></TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@color/gray"></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_13"
                android:textColor="@color/black"
                android:text="@string/detailText"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_13"
                android:textColor="@color/red"
                android:text="@string/SGG"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp_13"
                android:textColor="@color/black"
                android:text="@string/detailText2"></TextView>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@color/gray"></View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:orientation="horizontal">
            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:textSize="@dimen/dp_13"
                android:textColor="@color/black"
                android:text="@string/detailSelectText"></TextView>
            <ImageView
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/home_arrow_right"
                android:layout_gravity="right"></ImageView>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@color/gray"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_13"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/detailTips"></TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@color/gray"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp_13"
            android:textColor="@color/black"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/detail"></TextView>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_100"
            android:background="@color/red"></View>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"
        android:gravity="center">
            <TextView
                android:id="@+id/tv_good_info_callcenter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/icon_callserver_unpressed"
                android:gravity="center"
                android:padding="2dp"
                android:text="联系客服"
                android:textColor="#393b3e" />

            <TextView
                android:id="@+id/tv_good_info_collection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/good_uncollected"
                android:gravity="center"
                android:padding="2dp"
                android:text="收藏"
                android:textColor="#393b3e" />


            <TextView
                android:id="@+id/toShopMallCarFragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/icon_good_detail_cart"
                android:gravity="center"
                android:padding="2dp"
                android:text="购物车"
                android:textColor="#393b3e" />

            <Button
                android:id="@+id/addShopMallCar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/add_cart_bg_selector"
                android:gravity="center"
                android:text="加入购物车"
                android:textColor="#fff" />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>